fixed the webpage having white spaces by scaling the laptop.png image down as the screen size reduces.

--- a/styles.css
+++ b/styles.css
@@ -244,4 +244,8 @@ footer {
     .footer__links {
         margin-bottom: 24px;
     }
+
+    #laptop__image {
+        width:80vw;
+    }
 }
